# flask_travel

./: README.md  app.py  data.py  pyproject.toml
templates/: base.html  departure.html  index.html  tour.html
