[tool.poetry]
name = "flask_travel"
version = "0.1.0"
description = ""
authors = ["Roman Novikov <roma-novikov@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.2"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
